<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeightLossTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="initial_setup_button_label">Initialize</string>
    <string name="end_button_label">End This Track</string>
    <string name="daily_menu_button_label">Daily Tasks</string>
    <string name="challenge_button_label">Challenge Activity</string>
    <string name="inspire_button_label">Be Inspired</string>
    <string name="recipe_button_label">Random Recipe</string>
    <string name="track_sleep_button_label">Track Sleep</string>
    <string name="welcome_text">%1$s Algorithmic Weightloss Tracker</string>
    <string name="initial_title">Start Tracking</string>
    <string name="recipe_title">Try a Random Recipe</string>
    <string name="summary_title">Your Stats</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="enter_goal_hint">Current_Weight,Desired_Weight</string>
    <string name="enter_age_hint">Age</string>
    <string name="enter_height_hint">Height: feet,inches</string>
    <string name="end_date_label">Select End Date</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure">Are you sure you\'d like to end this track?</string>
    <string name="cancel">Cancel</string>
    <string name="calc_title">Your Calculation</string>
    <string name="calculation">In order to reach your goal weight, you must limit yourself to %1$s per day.</string>
    <string name="inspire_title">Inspire Yourself</string>
    <string name="inspire_quote">%1$s</string>
    <string name="initial_inspire">Let the inspiration begin!</string>
    <string name="close">Close</string>
    <string name="more">Give Me Another</string>
    <string name="daily_title">Day-To-Day Tracking</string>
    <string name="weight_hint">Enter Today\'s Weight</string>
    <string name="food_log">Food Log</string>
    <string name="weight_log_submit">Submit Weight</string>
    <string name="weight_log_update">Update Weight</string>
    <string name="exercise_log">Exercise Log</string>
    <string name="calories_left">You can consume %1$s more calories today.</string>
    <string name="day_countdown">Only %1$s days left!</string>
    <string name="challenge_title">Challenge Yourself</string>
    <string name="initial_challenge">Let the activities begin!</string>
    <string name="sleep_tracker_title">Sleep Tracker</string>
    <string name="going_to_sleep">I\'m going to sleep now</string>
    <string name="total_hours_text_empty">Track the number of hours you sleep each night.</string>
    <string name="total_hours_text_format">Last night you slept for %1$dh %2$dm %3$ds.</string>
    <string name="switch_awake">Awake</string>
    <string name="switch_sleeping">Sleeping</string>
    <string name="title_activity_sleep">SleepActivity</string>
    <string name="done">Done</string>
    <string name="recipe_activity_title">Random Recipe of The Day</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="submit">Submit</string>
    <string name="calories">Calories</string>
    <string name="name">Name</string>
    <string name="food_title">Food Log</string>
    <string name="activity_title">Activity Log</string>
     <string-array name="food_types">
        <item>Dairy</item>
        <item>Fruit</item>
        <item>Grain</item>
        <item>Meat</item>
        <item>Sweets</item>
        <item>Vegetables</item>
        <item>Alcohol</item>
    </string-array>
     <string-array name="summaries">
        <item>Weight v. Time</item>
        <item>Activity v. Time</item>
        <item>Sleep v. Time</item>
        <item>Food Summary</item>
    </string-array>

</resources>
