<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.rosehulman.weightlosstracker.MainActivity" >

    <TextView
        android:id="@+id/welcome_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/welcome_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="monospace" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/main_start_end_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textOff="@string/initial_setup_button_label"
                android:textOn="@string/end_button_label"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/camera_image_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="25dp"
                android:contentDescription="@string/hello_world"
                android:scaleX="2"
                android:scaleY="2"
                android:src="@android:drawable/ic_menu_camera" />

        </LinearLayout>

        <Button
            android:id="@+id/main_daily_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daily_menu_button_label"
            android:textSize="30sp" />

        <Button
            android:id="@+id/main_challenge_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/challenge_button_label"
            android:textSize="30sp" />

        <Button
            android:id="@+id/main_track_sleep_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/track_sleep_button_label"
            android:textSize="30sp" />

        <Button
            android:id="@+id/main_inspire_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/inspire_button_label"
            android:textSize="30sp" />
    </LinearLayout>

</RelativeLayout>