<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/daily"
    android:gravity="center_vertical|center_horizontal"
    android:layout_gravity="center_vertical"
    android:orientation="vertical" >

    <Button
        android:id="@+id/weight_log_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weight_log" />
    
    <Button
        android:id="@+id/food_log_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_log" />

    <Button
        android:id="@+id/activity_log_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_log" />

    <TextView
        android:id="@+id/cals_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calories_left"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/days_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day_countdown"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progress="0" />

    <Button
        android:id="@+id/close_daily"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close" />

</LinearLayout>