<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="fill_parent"  
    android:layout_height="fill_parent"  
    android:orientation="vertical" >  
  
    <RelativeLayout  
        android:id="@+id/rl_relativeLayout"  
        android:layout_width="fill_parent"  
        android:layout_height="250dip"  
        android:layout_gravity="center_horizontal"  
        android:layout_margin="10dip" >  
  
        <TextView  
            android:id="@+id/recipe_title"  
            android:layout_width="wrap_content"  
            android:layout_height="wrap_content"  
            android:text="@string/recipe_activity_title"  
            android:textAppearance="?android:attr/textAppearanceMedium"  
            android:textStyle="bold" android:layout_centerHorizontal="true"/>  
  
        <WebView  
            android:id="@+id/wb_webview"  
            android:layout_width="fill_parent"  
            android:layout_height="fill_parent" 
            android:layout_below="@id/recipe_title" 
            android:layout_marginTop="5dip"/>  
    </RelativeLayout>  
  
    <Button  
        android:id="@+id/recipe_new_button"  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:layout_marginLeft="10dip"  
        android:layout_marginRight="10dip"  
        android:text="@string/more" />  
        
    <Button  
        android:id="@+id/recipe_close_button"  
        android:layout_width="fill_parent"  
        android:layout_height="wrap_content"  
        android:layout_marginLeft="10dip"  
        android:layout_marginRight="10dip"  
        android:text="@string/close" />  
  
</LinearLayout>  