<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inspire_bkgrd"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/challenge_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="157dp"
        android:gravity="center_horizontal"
        android:text="@string/initial_challenge"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/inspire"
        android:textSize="30sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/challenge_new_button"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="27dp"
        android:text="@string/more"
        android:textColor="@color/inspire" />

    <Button
        android:id="@+id/challenge_close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/inspire_new_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:text="@string/close"
        android:textColor="@color/inspire" />

</RelativeLayout>